--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -41,4 +41,6 @@
   <body>
     <%- content %>
   </body>
+  <script src="/assets/scripts/renderFormattedDateTimes.js"></script>
+  <script src="/assets/scripts/renderFlags.js"></script>
 </html>
