--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -9,5 +9,6 @@
 // Sections
 @import './sections/hero.less';
 @import './sections/team.less';
+@import './sections/events.less';
 
 @import './nav.less';
