--- a/src/styles/variables/buttons.less
+++ b/src/styles/variables/buttons.less
@@ -22,6 +22,13 @@
   outline: 0;
 }
 
+// button that looks like a link
+.textButton() {
+  .bareButton();
+  cursor: pointer;
+  color: @color-dark-green;
+}
+
 .buttonStyledLink(@background-color) {
   .buttonCommon(@background-color);
 }
