--- a/src/home/docs.ejs
+++ b/src/home/docs.ejs
@@ -1,7 +1,9 @@
 ---
 title: Docs
-position: 103
+position: 6
 ---
+
+<h2>Resources and documentation</h2>
 
 <iframe
   src="https://docs.opencollective.foundation/"
