--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -25,14 +25,14 @@ h2 {
 }
 
 a {
-  // @link-color: @accent-color-jade;
+  @link-color: @font-color-base;
 
-  // color: @link-color;
-  // text-decoration: inherit;
+  color: @link-color;
+  text-decoration: inherit;
 
-  // &:hover {
-  //   border-bottom: 1px dashed @link-color;
-  // }
+  &:hover {
+    // border-bottom: 1px dashed @link-color;
+  }
 }
 
 main {
