--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -10,5 +10,6 @@
 @import './sections/hero.less';
 @import './sections/team.less';
 @import './sections/events.less';
+@import './sections/blog.less';
 
 @import './nav.less';
