--- a/src/styles/sections/team.less
+++ b/src/styles/sections/team.less
@@ -62,6 +62,10 @@ section#team {
       .social-icon('linkedin.svg');
     }
 
+    .github {
+      .social-icon('github.svg');
+    }
+
     .www {
       .social-icon('www.svg');
     }
