hero copy change

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -14,8 +14,7 @@ hideInNavigation: true
     </h1>
 
     <p class="subhead">
-      OC Foundation offers nonprofit status + fundraising + accounting software
-      to aligned groups.
+      OC Foundation offers nonprofit status + fundraising + money management software to aligned groups.
     </p>
 
     <a
