--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -16,6 +16,14 @@ section#hero {
       grid-column: span 6;
     }
 
+    h1 {
+      color: @color-dark-green;
+
+      .collective-name {
+        color: @font-color-base;
+      }
+    }
+
     .subhead {
       .paragraph-large;
       font-weight: @font-weight-light;
