--- a/src/styles/nav.less
+++ b/src/styles/nav.less
@@ -26,6 +26,7 @@
   z-index: 1;
   min-height: @nav-height;
   padding: 0 40px;
+  margin: auto;
 
   background-color: white;
   border-bottom: 1px solid @font-color-base;
