--- a/src/styles/base.less
+++ b/src/styles/base.less
@@ -2,6 +2,7 @@
 @import './variables/color.less';
 @import './variables/sizing.less';
 @import './variables/buttons.less';
+@import './base-table.less';
 
 // Typography
 
@@ -45,16 +46,4 @@ p {
 
 a.button {
   .buttonStyledLink(@font-color-base);
-}
-
-table {
-  th {
-    text-align: left;
-  }
-
-  td,
-  th {
-    padding: 1em 1em 1em 0;
-    border-bottom: 1px solid @font-color-base;
-  }
 }
