--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -11,5 +11,6 @@
 @import './sections/team.less';
 @import './sections/events.less';
 @import './sections/blog.less';
+@import './sections/services-table.less';
 
 @import './nav.less';
