--- a/src/_layouts/default.ejs
+++ b/src/_layouts/default.ejs
@@ -43,4 +43,5 @@
   </body>
   <script src="/assets/scripts/renderFormattedDateTimes.js"></script>
   <script src="/assets/scripts/renderFlags.js"></script>
+  <script src="/assets/scripts/addClassesToSymbolTable.js"></script>
 </html>
