Add links to services-table

--- a/src/styles/sections/services-table.less
+++ b/src/styles/sections/services-table.less
@@ -52,4 +52,10 @@ section#services-table table {
       .replace-with-symbol('question-mark.svg');
     }
   }
+
+  // links
+  a {
+    color: @color-dark-green;
+    text-decoration: underline;
+  }
 }
