--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -12,5 +12,6 @@
 @import './sections/events.less';
 @import './sections/blog.less';
 @import './sections/services-table.less';
+@import './sections/hosted-collectives.less';
 
 @import './nav.less';
