--- a/src/home/events.ejs
+++ b/src/home/events.ejs
@@ -9,7 +9,7 @@ function toIsoString(str) {
 }
 _%>
 
-<div class="content">
+<div class="content content-container">
   <div>
     <h2>Community events</h2>
     <p>Join our community forum on first fridays of the month to meet the team and other Collectives in a space of mutual
