--- a/src/home/hosted-collectives.ejs
+++ b/src/home/hosted-collectives.ejs
@@ -6,7 +6,7 @@ hideInNavigation: true
 
 <%_ function toIsoString(str) { return new Date(str).toISOString() } _%>
 
-<div class="content">
+<div class="content content-container">
   <div>
     <h2>Collective work + transparent finances = ♥️</h2>
     <p>
