--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -5,6 +5,7 @@
 @import './markdown-containers.less';
 
 // Partials
+@import './partials/heading-container.less';
 
 // Sections
 @import './sections/hero.less';
@@ -13,5 +14,6 @@
 @import './sections/blog.less';
 @import './sections/services-table.less';
 @import './sections/hosted-collectives.less';
+@import './sections/docs.less';
 
 @import './nav.less';
