--- a/src/styles/variables/sizing.less
+++ b/src/styles/variables/sizing.less
@@ -20,11 +20,10 @@ html {
   row-gap: @layout-grid-margin;
 }
 
-.content-container() {
+.content-container {
   max-width: @content-width;
   margin: auto;
-  padding: 0 @layout-grid-gutter;
-  margin: @layout-grid-margin auto;
+  padding: @layout-grid-margin;
   box-sizing: border-box;
 
   img {
