--- a/src/_includes/nav.ejs
+++ b/src/_includes/nav.ejs
@@ -1,24 +1,26 @@
 <nav class="main-nav">
-  <img class="logo" src="/assets/images/OCF-Logo.svg" alt="OCF Logo" />
-  <div class="links-container">
-    <ul class="links-list">
-      <% collections[collectionName].filter(section=>
-      !section.data.hideInNavigation).forEach((section)=> { %>
-      <li>
-        <a href="#<%= section.fileSlug %>"> <%= section.data.title %> </a>
-      </li>
-      <% }) %> <% (extraNavLinks || []).forEach(({href, isExternal, text, isCta}) => { %>
-      <li
-        class="<% if (isCta) {%>cta <%}%>">
-        <a href="<%= href %>" 
-          <% if (isExternal) { %>
-            target="_blank" rel="noopener noreferrer" 
-          <% } %>>
-          <%= text %>
-        </a>
-      </li>
-      <% }) %>
-    </ul>
+  <div class="content-container">
+    <img class="logo" src="/assets/images/OCF-Logo.svg" alt="OCF Logo" />
+    <div class="links-container">
+      <ul class="links-list">
+        <% collections[collectionName].filter(section=>
+        !section.data.hideInNavigation).forEach((section)=> { %>
+        <li>
+          <a href="#<%= section.fileSlug %>"> <%= section.data.title %> </a>
+        </li>
+        <% }) %> <% (extraNavLinks || []).forEach(({href, isExternal, text, isCta}) => { %>
+        <li
+          class="<% if (isCta) {%>cta <%}%>">
+          <a href="<%= href %>" 
+            <% if (isExternal) { %>
+              target="_blank" rel="noopener noreferrer" 
+            <% } %>>
+            <%= text %>
+          </a>
+        </li>
+        <% }) %>
+      </ul>
+    </div>
+    <a class="cta" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
   </div>
-  <a class="cta" href="https://opencollective.com/foundation/apply" target="_blank">Apply</a>
 </nav>
