--- a/src/home/docs.ejs
+++ b/src/home/docs.ejs
@@ -3,9 +3,15 @@ title: Docs
 position: 6
 ---
 
-<h2>Resources and documentation</h2>
+  <div class="heading-container">
+    <h2>Resources and documentation</h2>
+  </div>
 
-<iframe
-  src="https://docs.opencollective.foundation/"
-  style="width: 100%; height: 100vh; border: none"
-></iframe>
+<div class="docs-container">
+
+  <iframe
+    class="docs-frame"
+    src="https://docs.opencollective.foundation/"
+    style="width: 100%; height: 100vh; border: none"
+  ></iframe>
+</div>
