Import less variables globally
remove from each file

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,5 +1,12 @@
 @import 'normalize.css';
 
+// Variables
+@import './variables/buttons.less';
+@import './variables/color.less';
+@import './variables/rules.less';
+@import './variables/sizing.less';
+@import './variables/typography.less';
+
 @import './base.less';
 
 @import './markdown-containers.less';
