Add "And much more"

--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -45,10 +45,20 @@ hideInNavigation: true
   </div>
 </div>
 
-<div class="row fees-row">
+<div class="row text-row">
   <div class="content-container">
-    <h3 class="fees-heading">Fees</h3>
-    <p class="fees-copy">
+    <h3 class="text-heading">And much more!</h3>
+    <p class="text-copy">
+      Virtual cards – Free courses – Grants – Collective admins – Processing payments 2x a week – Community forums – Tech
+      owned by us – Transparency – Exit to community – Solidarity economies – Radical admin
+    </p>
+  </div>
+</div>
+
+<div class="row text-row">
+  <div class="content-container">
+    <h3 class="text-heading">Fees</h3>
+    <p class="text-copy">
       * We take 5% for crowdfunding done on the site. Third-party payment
       processors (like Stripe and Paypal) charge separate fees on each transaction
       made using their service. Learn more here. We take 4-8% for bank transfers
