--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -58,7 +58,7 @@ section#hero {
     }
   }
 
-  .fees-row {
+  .text-row {
     background-color: @background-color-lighter;
 
     p,
@@ -66,15 +66,15 @@ section#hero {
       margin: 0;
     }
 
-    .fees-heading {
-      grid-column: span 1;
+    .text-heading {
+      grid-column: span 2;
       .paragraph-mid();
       font-weight: @font-weight-regular;
       align-self: center;
     }
 
-    .fees-copy {
-      grid-column: span 11;
+    .text-copy {
+      grid-column: span 10;
       .paragraph-mid();
       font-weight: @font-weight-light;
     }
