--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -45,6 +45,36 @@ hideInNavigation: true
   </div>
 </div>
 
+<div class="heading-container">
+  <h2>We do the paperwork so that you can focus on your mission.</h2>
+</div>
+
+<div class="row network-row">
+  <div class="content-container">
+    <img class="network-graphic" src="assets/images/network.png"
+    alt="Infographic showing the steps: Apply, then meet us, then set up your page, then raise funds!" />
+    <p class="network-copy">
+      We are part of an international network of 600 nonprofits, LLCs, and co-ops around the world that use the same, open
+      source software to create efficiencies with money.
+    </p>
+  </div>
+</div>
+
+<div class="row video-row">
+  <div class="content-container">
+    <p class="video-copy">
+      OC Foundation is a nonprofit with a tech platform that enables over 300 groups to raise and spend over $13 million
+      dollars a year in full transparency.
+    </p>
+
+    <div class="video-wrapper">
+      <iframe class="video" src="https://www.youtube-nocookie.com/embed/269SyUQmL_U?modestbranding=1&rel=0&showinfo=0" title="YouTube video player"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
+    </div>
+  </div>
+</div>
+
 <div class="row text-row">
   <div class="content-container">
     <h3 class="text-heading">And much more!</h3>
