--- a/src/home/hero.ejs
+++ b/src/home/hero.ejs
@@ -62,16 +62,43 @@ hideInNavigation: true
 
 <div class="row video-row">
   <div class="content-container">
-    <p class="video-copy">
-      OC Foundation is a nonprofit with a tech platform that enables over 300 groups to raise and spend over $13 million
-      dollars a year in full transparency.
-    </p>
+    <div class="column">
+      <p class="video-copy">
+        OC Foundation is a nonprofit with a tech platform that enables over 300 groups to raise and spend over $13 million
+        dollars a year in full transparency.
+      </p>
+    </div>
 
     <div class="video-wrapper">
       <iframe class="video" src="https://www.youtube-nocookie.com/embed/269SyUQmL_U?modestbranding=1&rel=0&showinfo=0" title="YouTube video player"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     </div>
+  </div>
+</div>
+
+<div class="row checklist-row">
+  <div class="content-container">
+    <div class="column">
+      <p>
+        If your group wants&nbsp;to:
+      </p>
+    </div>
+
+    <ul class="checklist column">
+      <li><div>View your entire budget in one secure place</div></li>
+      <li>Share your budget with your community</li>
+      <li>Apply for a grant</li>
+      <li>Offer tax write-offs when people donate</li>
+      <li>Create mini-grants for your community</li>
+      <li>Offer prepaid debit cards to your team</li>
+      <li>Reimburse volunteers</li>
+      <li>Use an open-source and community-led platform</li>
+    </ul>
+
+    <p class="column">
+      We've got you covered!
+    </p>
   </div>
 </div>
 
