--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -58,17 +58,26 @@ section#hero {
     }
   }
 
-  .network-row {
-    border-bottom: @default-rule;
+  .column {
+    grid-column: span 4;
+    border-right: @default-rule;
+    // easy vertical centering with 1-cell grid
+    display: grid;
 
+    &:last-child {
+      border-right: none;
+    }
+  }
+
+  .network-row {
     .network-copy {
-      grid-column: span 4;
+      grid-column: span 3;
       align-self: center;
       .paragraph-large();
     }
 
     .network-graphic {
-      grid-column-end: span 8;
+      grid-column-end: span (12 - 3);
       box-sizing: border-box;
     }
   }
@@ -87,8 +96,8 @@ section#hero {
 
     .video-wrapper {
       grid-column-end: span 8;
-      border-left: @default-rule;
       padding: @layout-grid-margin;
+      padding-left: 0; // there's already a grid gap
       box-sizing: border-box;
     }
 
@@ -98,6 +107,46 @@ section#hero {
       width: 100%;
 
       border-radius: @border-radius;
+    }
+  }
+
+  .checklist-row {
+    .content-container {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
+
+    p {
+      .heading-h2();
+      align-self: center;
+    }
+
+    .checklist {
+      .paragraph-large();
+
+      list-style: none;
+      margin: 0;
+      padding: @layout-grid-margin;
+      padding-left: 0; // there's already a grid gap
+
+      li {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        margin-bottom: 20px;
+
+        &::before {
+          content: '';
+          display: block;
+          flex-shrink: 0;
+          margin-right: 1em;
+          width: 22px;
+          height: 22px;
+          background: url('/assets/images/checkmark.svg') no-repeat center
+            center;
+        }
+      }
     }
   }
 
