Show hosted-collectives in nav

--- a/src/home/hosted-collectives.ejs
+++ b/src/home/hosted-collectives.ejs
@@ -1,7 +1,7 @@
 ---
-title: Hosted collectives
+title: Community
 position: 3
-hideInNavigation: true
+hideInNavigation: false
 ---
 
 <%_ function toIsoString(str) { return new Date(str).toISOString() } _%>
