Padding before vertical line

--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -60,6 +60,7 @@ section#hero {
 
   .column {
     grid-column: span 4;
+    padding-right: @layout-grid-gutter;
     border-right: @default-rule;
     // easy vertical centering with 1-cell grid
     display: grid;
