--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -29,7 +29,9 @@ section#hero {
     .collective-hero-image {
       border-radius: @border-radius;
       object-fit: cover;
-      height: 100%;
+      height: 496px;
+      aspect-ratio: 520 / 496;
+      justify-self: end;
     }
 
     .cta {
