--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -13,13 +13,15 @@
 
 // Partials
 @import './partials/heading-container.less';
+@import './partials/row.less';
+@import './partials/services-table.less';
 
 // Sections
 @import './sections/hero.less';
+@import './sections/services.less';
 @import './sections/team.less';
 @import './sections/events.less';
 @import './sections/blog.less';
-@import './sections/services-table.less';
 @import './sections/hosted-collectives.less';
 @import './sections/docs.less';
 
