--- a/src/styles/partials/services-table.less
+++ b/src/styles/partials/services-table.less
@@ -1,9 +1,9 @@
-section#services-table {
+.services-table-container {
   background-color: @background-color-lighter;
   border-bottom: @default-rule;
 }
 
-section#services-table table {
+.services-table-container table {
   .content-container();
   .paragraph-mid();
   font-weight: @font-weight-regular;
