--- a/src/styles/sections/hero.less
+++ b/src/styles/sections/hero.less
@@ -1,12 +1,4 @@
 section#hero {
-  .row {
-    border-bottom: @default-rule;
-
-    .content-container {
-      .layout-grid();
-    }
-  }
-
   .hero-row {
     .left,
     .collective-hero-image {
@@ -60,18 +52,6 @@ section#hero {
     }
   }
 
-  .column {
-    grid-column: span 4;
-    padding-right: @layout-grid-gutter;
-    border-right: @default-rule;
-    // easy vertical centering with 1-cell grid
-    display: grid;
-
-    &:last-child {
-      border-right: none;
-    }
-  }
-
   .network-row {
     .network-copy {
       grid-column: span 3;
@@ -91,17 +71,18 @@ section#hero {
       padding-bottom: 0;
     }
 
-    .video-copy {
+    .video-copy-container {
       .subheading();
       grid-column: span 4;
       align-self: center;
+      height: 100%;
     }
 
     .video-wrapper {
       grid-column-end: span 8;
-      padding: @layout-grid-margin;
-      padding-left: 0; // there's already a grid gap
+      padding: @layout-grid-margin 0;
       box-sizing: border-box;
+      justify-self: stretch;
     }
 
     .video {
@@ -110,68 +91,6 @@ section#hero {
       width: 100%;
 
       border-radius: @border-radius;
-    }
-  }
-
-  .checklist-row {
-    .content-container {
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-
-    p {
-      .heading-h2();
-      align-self: center;
-    }
-
-    .checklist {
-      .paragraph-large();
-
-      list-style: none;
-      margin: 0;
-      padding: @layout-grid-margin;
-      padding-left: 0; // there's already a grid gap
-
-      li {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-
-        margin-bottom: 20px;
-
-        &::before {
-          content: '';
-          display: block;
-          flex-shrink: 0;
-          margin-right: 1em;
-          width: 22px;
-          height: 22px;
-          background: url('/assets/images/checkmark.svg') no-repeat center
-            center;
-        }
-      }
-    }
-  }
-
-  .text-row {
-    background-color: @background-color-lighter;
-
-    p,
-    h3 {
-      margin: 0;
-    }
-
-    .text-heading {
-      grid-column: span 2;
-      .paragraph-mid();
-      font-weight: @font-weight-regular;
-      align-self: center;
-    }
-
-    .text-copy {
-      grid-column: span 10;
-      .paragraph-mid();
-      font-weight: @font-weight-light;
     }
   }
 }
